objects/ssot__FinancialGoalParty__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialGoalId__c</fullName>
        <label>Financial Goal</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Financial Goal Party Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761236744_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FinancialGoalParty_FinancialGoalId_m_rel</label>
        <referenceTo>ssot__FinancialGoal__dlm</referenceTo>
        <relationshipLabel>FinancialGoalParty_FinancialGoalId_m_rel</relationshipLabel>
        <relationshipName>rel_1697761236744_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>